--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://i2.wp.com/static.cdn-cdpl.com/source/b8e29e8f0b15aab3473fed5df06c9186/avatar-premium-default.jpg" style="width:100%" alt="Avatar">
+          <img src="http://pluspng.com/img-png/anime-hd-png-anime-hd-wallpaper-desktop-background-748.png" style="width:100px;height:100px" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Ami</h2>
           </div>
