--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="http://pluspng.com/img-png/anime-hd-png-anime-hd-wallpaper-desktop-background-748.png" style="width:100%" alt="Avatar">
+          <img src="http://www.scalsys.com/png/anime-png/anime-png_4796.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h2>Ami</h2>
           </div>
