--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <div class="container">
   <img src="http://pluspng.com/img-png/anime-png-black-and-white-anime-girl-render-by-feary-bad-day-400.png" alt="Avatar" class="image" style="width:100%">
   <div class="middle">
-    <div class="text">John Doe</div>
+    <div class="text">Ami</div>
   </div>
 </div>
   
