--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <body>
   
 <div class="container">
-  <img src="http://pluspng.com/img-png/anime-png-black-and-white-anime-girl-render-by-feary-bad-day-400.png" alt="Avatar" class="image" style="width:400px;height:400px">
+  <img src="http://www.scalsys.com/png/anime-png/anime-png_4796.jpg" alt="Avatar" class="image" style="width:100%">
   <div class="middle">
     <div class="text">Ami</div>
   </div>
